--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-    /* background-color: rgba(247, 252, 255, 0.899); */
+    background-color: rgba(68, 8, 8, 0.049);
     font-size: 16px;
     font-family: 'Times New Roman', Times, serif;
 }
@@ -32,7 +32,7 @@ header h1>span:hover {
     transform: rotate(10deg);
 }
 
-header>button {
+.button {
     padding: 12px;
     margin: 10px 20px;
     border: 1px;
@@ -41,7 +41,7 @@ header>button {
     background-color: rgba(155, 160, 163, 0.515);
 }
 
-header>button:hover {
+.button:hover {
     background-color: rgba(12, 51, 177, 0.515);
     transform: scale(0.9);
 }
@@ -58,7 +58,7 @@ main {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: transparent;
+    background-color: #fff;
     border: 1px solid rgb(233, 211, 211);
 }
 
@@ -72,11 +72,15 @@ label {
 input,
 textarea {
     width: 90%;
-    height: 3rem;
+    height: 2rem;
     border: 1px solid lightgray;
     border-radius: 5px;
     padding: 5px;
-    margin: 10px 10px;
+    margin: 0.7em 0.7em;
+}
+
+textarea {
+    height: 4em;
 }
 
 input:focus,
@@ -89,6 +93,41 @@ textarea:focus {
     height: 2rem;
 }
 
+.recipe-card {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.card {
+    background-color: #fff;
+    margin: 2rem;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    width: 30%;
+}
+
+.card>.image {
+    width: 100%;
+    height: 20%;
+    padding: 20px;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    transform: translate(2px, 3px);
+}
+
+.name,
+.descriptions,
+.ingredients {
+    color: grey;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    text-align: center;
+}
+
 @media only screen and (max-width: 699px),
 (max-width: 1151px) {
     body {
@@ -98,5 +137,8 @@ textarea:focus {
     }
     header h1 {
         text-align: center;
+    }
+    .form-section {
+        width: 100%;
     }
 }
