--- a/css/main.css
+++ b/css/main.css
@@ -1,144 +1,150 @@
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-html {
-    scroll-behavior: smooth;
-}
-
-body {
-    background-color: rgba(68, 8, 8, 0.049);
-    font-size: 16px;
-    font-family: 'Times New Roman', Times, serif;
-}
-
-header {
-    padding: 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: rgb(43, 42, 42);
-    transition: all 0.3s ease;
-}
-
-header h1>span {
-    color: rgb(26, 101, 170);
-}
-
-header h1>span:hover {
-    transform: rotate(10deg);
-}
-
-.button {
-    padding: 12px;
-    margin: 10px 20px;
-    border: 1px;
-    border-radius: 10px;
-    outline: none;
-    background-color: rgba(155, 160, 163, 0.515);
-}
-
-.button:hover {
-    background-color: rgba(12, 51, 177, 0.515);
-    transform: scale(0.9);
-}
-
-main {
-    display: grid;
-    grid-area: "form form form" "card1 card2 card3";
-}
-
-.form-section {
-    width: 50%;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #fff;
-    border: 1px solid rgb(233, 211, 211);
-}
-
-label {
-    color: rgba(12, 51, 177, 0.515);
-    font-size: 1rem;
-    display: block;
-    margin-top: 5px;
-}
-
-input,
-textarea {
-    width: 90%;
-    height: 2rem;
-    border: 1px solid lightgray;
-    border-radius: 5px;
-    padding: 5px;
-    margin: 0.7em 0.7em;
-}
-
-textarea {
-    height: 4em;
-}
-
-input:focus,
-textarea:focus {
-    outline: none;
-    border: 1px solid rgb(181, 34, 181);
-}
-
-.form-section>#img {
-    height: 2rem;
-}
-
-.recipe-card {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-}
-
-.card {
-    background-color: #fff;
-    margin: 2rem;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
-    width: 30%;
-}
-
-.card>.image {
-    width: 100%;
-    height: 20%;
-    padding: 20px;
-}
-
-.card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-    transform: translate(2px, 3px);
-}
-
-.name,
-.descriptions,
-.ingredients {
-    color: grey;
-    margin-top: 5px;
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-@media only screen and (max-width: 699px),
-(max-width: 1151px) {
-    body {
-        background-repeat: no-repeat;
-        background-position: center;
-        height: 100vh;
-    }
-    header h1 {
-        text-align: center;
-    }
-    .form-section {
-        width: 100%;
-    }
-}
+ * {
+     box-sizing: border-box;
+     margin: 0;
+     padding: 0;
+ }
+ 
+ html {
+     scroll-behavior: smooth;
+ }
+ 
+ body {
+     background-color: rgba(68, 8, 8, 0.049);
+     font-size: 16px;
+     font-family: 'Times New Roman', Times, serif;
+ }
+ 
+ header {
+     padding: 30px;
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     color: rgb(43, 42, 42);
+     transition: all 0.3s ease;
+ }
+ 
+ header h1>span {
+     color: rgb(26, 101, 170);
+ }
+ 
+ header h1>span:hover {
+     transform: rotate(10deg);
+ }
+ 
+ .button {
+     padding: 12px;
+     margin: 10px 20px;
+     border: 1px;
+     border-radius: 10px;
+     outline: none;
+     background-color: rgba(155, 160, 163, 0.515);
+ }
+ 
+ .button:hover {
+     background-color: rgba(12, 51, 177, 0.515);
+     transform: scale(0.9);
+ }
+ 
+ main {
+     display: grid;
+     grid-area: "form form form" "card1 card2 card3";
+ }
+ 
+ .form-section {
+     width: 50%;
+     margin: auto;
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     background-color: #fff;
+     border: 1px solid rgb(233, 211, 211);
+ }
+ 
+ label {
+     color: rgba(12, 51, 177, 0.515);
+     font-size: 1rem;
+     display: block;
+     margin-top: 5px;
+ }
+ 
+ input,
+ textarea {
+     width: 90%;
+     height: 2rem;
+     border: 1px solid lightgray;
+     border-radius: 5px;
+     padding: 5px;
+     margin: 0.7em 0.7em;
+ }
+ 
+ textarea {
+     height: 4em;
+ }
+ 
+ input:focus,
+ textarea:focus {
+     outline: none;
+     border: 1px solid rgb(181, 34, 181);
+ }
+ 
+ .form-section>#img {
+     height: 2rem;
+ }
+ 
+ .recipe-card {
+     display: flex;
+     flex-wrap: wrap;
+     justify-content: center;
+     align-items: center;
+ }
+ 
+ .card {
+     background-color: #fff;
+     margin: 2rem;
+     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+     transition: 0.3s;
+     width: 30%;
+ }
+ 
+ .image {
+     width: 100%;
+     height: 20%;
+     padding: 20px;
+ }
+ 
+ .card:hover {
+     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+     transform: translate(2px, 3px);
+ }
+ 
+ .name,
+ .descriptions,
+ .ingredients {
+     color: grey;
+     margin-top: 5px;
+     margin-bottom: 10px;
+     text-align: center;
+ }
+ 
+ @media only screen and (max-width: 699px),
+ (max-width: 1151px) {
+     body {
+         background-repeat: no-repeat;
+         background-position: center;
+         height: 100vh;
+     }
+     header h1 {
+         text-align: center;
+     }
+     .form-section {
+         width: 100%;
+     }
+     .recipe-card {
+         display: flex;
+         flex-wrap: wrap;
+         justify-content: center;
+         align-items: center;
+     }
+ }
