--- a/css/main.css
+++ b/css/main.css
@@ -46,11 +46,6 @@
      transform: scale(0.9);
  }
  
- main {
-     display: grid;
-     grid-area: "form form form" "card1 card2 card3";
- }
- 
  .form-section {
      width: 50%;
      margin: auto;
@@ -128,13 +123,7 @@
      text-align: center;
  }
  
- @media only screen and (max-width: 699px),
- (max-width: 1151px) {
-     body {
-         background-repeat: no-repeat;
-         background-position: center;
-         height: 100vh;
-     }
+ @media only screen and (max-width:700px) {
      header h1 {
          text-align: center;
      }
@@ -143,8 +132,10 @@
      }
      .recipe-card {
          display: flex;
-         flex-wrap: wrap;
          justify-content: center;
          align-items: center;
+     }
+     .card {
+         width: 80%;
      }
  }
