add a media query

--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,7 @@
  }
  
  .form-section {
-     width: 50%;
+     width: 70%;
      margin: auto;
      display: flex;
      flex-direction: column;
@@ -129,19 +129,32 @@
      text-align: center;
  }
  
+ sapn {
+     color: rgb(26, 101, 170);
+     font-size: 1.6em;
+     font-family: Arial, Helvetica, sans-serif;
+ }
+ 
  @media only screen and (max-width:700px) {
      header h1 {
          text-align: center;
      }
      .form-section {
-         width: 100%;
-     }
-     .recipe-card {
-         display: flex;
-         justify-content: center;
-         align-items: center;
+         width: 60%;
      }
      .card {
-         width: 80%;
+         width: 60%;
+     }
+ }
+ 
+ @media only screen and (max-width:1000px) {
+     header h1 {
+         text-align: center;
+     }
+     .form-section {
+         width: 60%;
+     }
+     .card {
+         width: 50%;
      }
  }
