--- a/css/main.css
+++ b/css/main.css
@@ -101,7 +101,9 @@
      margin: 2rem;
      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
      transition: 0.3s;
-     width: 30%;
+     width: 40%;
+     padding: 20px;
+     position: relative;
  }
  
  .image {
@@ -113,6 +115,12 @@
  .card:hover {
      box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
      transform: translate(2px, 3px);
+ }
+ 
+ .button_card {
+     margin-left: 25%;
+     margin-left: 25%;
+     width: 50%;
  }
  
  .button_card:hover {
